--- a/index.html
+++ b/index.html
@@ -1,12 +1,191 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>instant-tail</title>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+
+      #app {
+        -moz-osx-font-smoothing: grayscale;
+        -webkit-font-smoothing: antialiased;
+        color: #2c3e50;
+        font-family: Courier, serif;
+        font-size: 13px;
+        position: relative;
+      }
+      input {
+        background-color: #e2e2e2;
+        border: none;
+        display: block;
+        font-size: 16px;
+        opacity: 1;
+        padding: 7px 15px;
+        transition-timing-function: ease-in;
+        transition: opacity 0.3s;
+        width: 100%;
+      }
+
+      .search {
+        display: block;
+        position: fixed;
+        width: 100%;
+      }
+
+      .spacer {
+        display: block;
+        height: 39px;
+      }
+
+      body,
+      html {
+        margin: 0;
+        padding: 0;
+      }
+      table {
+        border-collapse: collapse;
+        width: 100%;
+        table-layout: fixed;
+      }
+
+      tr td {
+        background-color: white;
+        transition: background-color 70ms ease-in;
+      }
+
+      tr.clear td {
+        background-color: #c1d8df;
+        transition: background-color 200ms ease-out;
+      }
+
+      td,
+      th {
+        padding: 7px 15px;
+        text-align: left;
+      }
+      th.thtcls {
+        width: 223px;
+      }
+      td {
+        border-bottom: 1px solid #f1f1f1;
+      }
+
+      .srch {
+        font-family: Arial, sans-serif;
+        color: #b5b4b4;
+        letter-spacing: 0.17px;
+      }
+
+      .rl {
+        overflow: hidden;
+      }
+
+      .tcls {
+        white-space: nowrap;
+        color: #000000;
+        cursor: pointer;
+        font-weight: 600;
+      }
+      .ht {
+        color: #000000;
+      }
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+      <div class="search">
+        <input type="text" v-model="query" placeholder="Search" v-on:keyup.enter="showAll" v-on:keydown.shift="show_rule = !show_rule" />
+      </div>
+      <div class="spacer"></div>
+      <table>
+        <tr>
+          <th class="thtcls">class</th>
+          <th>rule</th>
+        </tr>
+        <tr v-for="item in results" :key="item.id" :id="'rw' + item.id">
+          <td title="click to copy" @click.stop.prevent="copyClass(item.class, item.id)">{{ item.class }}</td>
+          <td class="rl"><span class="rule" v-html="item.rule"></span>&nbsp;&nbsp;<span v-if="show_rule" class="srch" v-html="item.search"></span></td>
+        </tr>
+      </table>
+
+      <input type="hidden" id="pass-css" />
+    </div>
+
+    <script>
+      var vm = new Vue({
+        el: '#app',
+        data: {
+          query: '',
+          results: [],
+          show_rule: false,
+        },
+        methods: {
+          copyClass(sendCopy, itemId) {
+            let testingCodeToCopy = document.querySelector('#pass-css');
+            testingCodeToCopy.value = sendCopy.trim().substr(1);
+            testingCodeToCopy.setAttribute('type', 'text');
+            testingCodeToCopy.select();
+
+            try {
+              document.execCommand('copy');
+              signalCopy(itemId);
+            } catch (err) {
+              alert('Oops, unable to copy');
+            }
+            testingCodeToCopy.setAttribute('type', 'hidden');
+            window.getSelection().removeAllRanges();
+          },
+          showAll() {
+            if (this.query === ' ') {
+              let app = this;
+              axios.get('http://127.0.0.1:7700/indexes/tailcss/documents?limit=2000').then(function(response) {
+                response.data.sort((a, b) => (a.class > b.class ? 1 : -1));
+                app.results = response.data;
+              });
+            }
+          },
+        },
+        watch: {
+          query: function(val) {
+            if (val !== '') {
+              let app = this;
+              axios.get('http://127.0.0.1:7700/indexes/tailcss/search?limit=700&q=' + val).then(function(response) {
+                response.data.hits.sort((a, b) => (a.class > b.class ? 1 : -1));
+                filteredrows = response.data.hits.map(function(row) {
+                  vm.query.split(' ').forEach(el => {
+                    if (el !== '') {
+                      row.search = row.search.replace(new RegExp(el, 'gi'), match => {
+                        return '<span class="ht">' + match + '</span>';
+                      });
+                    }
+                  });
+                  return row;
+                });
+
+                app.results = filteredrows;
+              });
+            } else {
+              this.results = [];
+            }
+          },
+        },
+        mounted() {},
+        computed: {},
+      });
+
+      function signalCopy(itemId) {
+        let row = document.getElementById('rw' + itemId);
+        row.classList.add('clear');
+
+        setTimeout(function() {
+          row.classList.remove('clear');
+        }, 60);
+      }
+    </script>
   </body>
 </html>
